# ics06-solomachine

./: Cargo.toml  Mekefile  README.md  temp.txt
.github/workflows/: check.yml
crates/ics06-solomachine/: Cargo.toml
crates/ics06-solomachine/src/: client_state.rs  consensus_state.rs  context.rs  error.rs  header.rs  lib.rs  misbehaviour.rs  prelude.rs  proof.rs
crates/ics06-solomachine/src/client_state/: misbehaviour.rs  update_client.rs
crates/ics06-solomachine/src/cosmos/: error.rs  mod.rs
crates/ics06-solomachine/src/cosmos/crypto/: mod.rs  public_key.rs
crates/ics06-solomachine/src/cosmos/raw_proto/: ed25519.rs  mod.rs  secp256k1.rs
crates/ics06-solomachine/types/: Cargo.toml
crates/ics06-solomachine/types/src/: client_state.rs  consensus_state.rs  error.rs  header.rs  lib.rs  misbehaviour.rs
crates/ics06-solomachine/types/src/cosmos/: error.rs  mod.rs
crates/ics06-solomachine/types/src/cosmos/crypto/: public_key.rs
crates/ics06-solomachine/types/src/proof/: mod.rs
crates/ics06-solomachine/types/src/proof/types/: header_data.rs  sign_bytes.rs  signature_and_data.rs  timestamped_signature_data.rs
src/: client_state.rs  consensus_state.rs  context.rs  error.rs  header.rs  lib.rs  misbehaviour.rs  prelude.rs  proof.rs  signature_and_data.rs  types.rs
src/client_state/: misbehaviour.rs  update_client.rs
src/cosmos/: error.rs  mod.rs
src/cosmos/base/: account_id.rs  mod.rs
src/cosmos/crypto/: compact_bit_array.rs  legacy_amino.rs  mod.rs  public_key.rs  types.rs
src/cosmos/crypto/secp256k1/: signing_key.rs
src/cosmos/crypto/types/: multisignature.rs
src/misbehaviour/: signature_and_data.rs
src/proof/types/: channel_state_data.rs  client_state_data.rs  connection_state_data.rs  consensus_state_data.rs  header_data.rs  mod.rs  next_sequence_recv_data.rs  packet_acknowledgement_data.rs  sign_bytes.rs  signature_and_data.rs  timestamped_signature_data.rs
src/public_key/: mod.rs  pub_key.rs
src/types/: consensus_state_data.rs  header_data.rs  next_sequence_recv_data.rs  packet_commitment_data.rs  packet_receipt_absence_data.rs  sign_bytes.rs  timestamped_signature_data.rs
src/v1/: client_state.rs  consensus_state.rs  error.rs  header.rs  misbehaviour.rs  mod.rs  proof.rs
src/v1/client_state/: misbehaviour.rs  update_client.rs
src/v1/proof/types/: channel_state_data.rs  client_state_data.rs  connection_state_data.rs  consensus_state_data.rs  header_data.rs  mod.rs  next_sequence_recv_data.rs  packet_acknowledgement_data.rs  packet_commitment_data.rs  packet_receipt_absence_data.rs  sign_bytes.rs  signature_and_data.rs  timestamped_signature_data.rs
src/v2/: client_state.rs  consensus_state.rs  header.rs  misbehaviour.rs  mod.rs  proof.rs
src/v2/client_state/: misbehaviour.rs  update_client.rs
src/v2/proof/types/: channel_state_data.rs  client_state_data.rs  connection_state_data.rs  consensus_state_data.rs  header_data.rs  mod.rs  next_sequence_recv_data.rs  packet_acknowledgement_data.rs  packet_commitment_data.rs  packet_receipt_absence_data.rs  sign_bytes.rs  signature_and_data.rs  timestamped_signature_data.rs
src/v3/: client_state.rs  consensus_state.rs  context.rs  error.rs  header.rs  misbehaviour.rs  proof.rs
src/v3/client_state/: misbehaviour.rs  update_client.rs
src/v3/proof/types/: header_data.rs  sign_bytes.rs  signature_and_data.rs  timestamped_signature_data.rs
