[package]
name = "ics06-solomachine"
version = "0.1.0"
edition = "2021"
keywords     = ["solomachine", "ics06", "cosmos", "ibc"]
repository   = "https://github.com/octopus-network/ics06-solomachine.git"
authors      = ["Octopus Network"]
description  = """
    Implementation of the ICS06 solomachine client according by ibc-go.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = { version = "0.42.0", features = ["parity-scale-codec", "borsh"], default-features = false }
ibc-proto = { version = "0.32.0", features = ["parity-scale-codec", "borsh"], default-features = false }
prost = { version = "0.11", default-features = false }
displaydoc = { version = "0.2", default-features = false }
bytes = { version = "1.2.1", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }
subtle-encoding = { version = "0.5", default-features = false }


[dependencies.tendermint]
version = "0.32"
default-features = false
features = ["secp256k1", "rust-crypto"]

[dependencies.tendermint-proto]
version = "0.32"
default-features = false

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std", "v3", "serde"]
std = [
    "ibc/std",
    "ibc-proto/std",
    "prost/std",
    "displaydoc/std",
    "bytes/std",
    "serde/std",
    "serde_json/std",
    "k256/std",
    "tendermint/std",
    "subtle-encoding/std",
]
v2 = []
v3 = []
serde = ["serde/std", "serde_json/std", "ibc/serde"]

[patch.crates-io]
# commit is : Update ibc-proto dep
ibc = { git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.42.0-julian" }
ibc-proto = { git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "v0.32.0-julian" }
