[package]
name = "ics06-solomachine"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
keywords = ["solomachine", "ics06", "cosmos", "ibc"]
repository = "https://github.com/octopus-network/ics06-solomachine.git"
authors = ['Octopus Network <hi@oct.network>']
readme = "README.md"
description  = """
    Implementation of the ICS06 solomachine client according by ibc-go.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = { version = "0.45.0", features = ["parity-scale-codec", "borsh"], default-features = false }
ibc-proto = { version = "0.39", features = ["parity-scale-codec", "borsh", "serde"], default-features = false }
prost = { version = "0.11", default-features = false }
displaydoc = { version = "0.2", default-features = false }
bytes = { version = "1.2.1", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }
subtle-encoding = { version = "0.5", default-features = false }


[dependencies.tendermint]
version = "0.33"
default-features = false
features = ["secp256k1", "rust-crypto"]

[dependencies.tendermint-proto]
version = "0.33"
default-features = false

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std", "v3", "serde"]
std = [
    "ibc/std",
    "ibc-proto/std",
    "prost/std",
    "displaydoc/std",
    "bytes/std",
    "serde/std",
    "serde_json/std",
    "k256/std",
    "tendermint/std",
    "subtle-encoding/std",
]
v3 = []
serde = ["serde/std", "serde_json/std", "ibc/serde"]
