[workspace]
resolver = "2"
members = [
    "crates/ics06-solomachine",
    "crates/ics06-solomachine/types",
]

[patch.crates-io]
# ibc proto
ibc-proto = { git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "v0.38.0-octopus"}

# ibc
ibc-core = { git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.48.1-octopus" }

[workspace.dependencies]
# external dependencies
borsh = { version = "0.10", default-features = false }
bytes = { version = "1.5.0", default-features = false }
displaydoc = { version = "0.2", default-features = false }
prost = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { package = "serde-json-wasm", version = "1.0.0" , default-features = false }
subtle-encoding     = { version = "0.5", default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }

ibc-core    = { version = "0.48.1", default-features = false }
ibc-proto                 = { version = "0.38.0", default-features = false }

tendermint = { version = "0.34.0", default-features = false, features = ["secp256k1", "rust-crypto"] }

# parity dependencies
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["full"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
