[package]
name = "ibc-client-solomachine"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
keywords = ["solomachine", "ics06", "cosmos", "ibc"]
repository = "https://github.com/octopus-network/ics06-solomachine.git"
authors = ['Octopus Network <hi@oct.network>']
readme = "README.md"
description  = """
    Implementation of the ICS06 solomachine client according by ibc-go.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ibc-core = { workspace = true }
ibc-proto = { workspace = true }
ibc-client-solomachine-types = { workspace = true }

prost = { workspace = true  }
displaydoc = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
subtle-encoding = { workspace = true }

tendermint = { workspace = true }
tendermint-proto = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std", "v3", "serde"]
std = [
    "ibc-core/std",
    "ibc-client-solomachine-types/std",
    "ibc-proto/std",
    "prost/std",
    "displaydoc/std",
    "bytes/std",
    "serde/std",
    "serde_json/std",
    "k256/std",
    "tendermint/std",
    "subtle-encoding/std",
]
v3 = []
serde = ["serde/std"]
