[package]
name = "ibc-client-solomachine"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
keywords = ["solomachine", "ics06", "cosmos", "ibc"]
repository = "https://github.com/octopus-network/ics06-solomachine.git"
authors = ['Octopus Network <hi@oct.network>']
readme = "README.md"
description  = """
    Implementation of the ICS06 solomachine client according by ibc-go.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ibc-core = { workspace = true }
ibc-proto = { workspace = true }
ibc-client-solomachine-types = { workspace = true }

prost = { workspace = true  }
serde = { workspace = true, optional = true }

tendermint = { workspace = true }
tendermint-proto = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"


[features]
default = ["std"]
std = [
    "prost/std",
    "serde/std",
    "ibc-client-solomachine-types/std",
    "ibc-core/std",
    "tendermint/std",
]
serde = [
    "dep:serde",
    "ibc-client-solomachine-types/serde",
    "ibc-core/serde",
]
schema = [
    "ibc-client-solomachine-types/schema",
    "ibc-core/schema",
    "serde",
    "std"
]
borsh = [
    "ibc-client-solomachine-types/borsh",
    "ibc-core/borsh",
]
parity-scale-codec = [
    "ibc-client-solomachine-types/parity-scale-codec",
    "ibc-core/parity-scale-codec",
]
