[package]
name = "ibc-client-solomachine-types"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
# external dependencies
borsh      = { workspace = true, optional = true }
bytes      = { workspace = true }
displaydoc = { workspace = true }
prost      = { workspace = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true}
subtle-encoding = { workspace = true }
k256 = { workspace = true }

# ibc dependencies
ibc-core = { workspace = true }
ibc-proto = { workspace = true }

# tendermint
tendermint = { workspace = true }

# parity dependencies
parity-scale-codec = { workspace = true, optional = true }
scale-info         = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "bytes/std",
    "displaydoc/std",
    "prost/std",
    "serde/std",
    "serde_json/std",
    "subtle-encoding/std",
    "k256/std",
    "ibc-core/std",
    "ibc-proto/std",
    "tendermint/std",
]
serde = [
    "dep:serde",
    "ibc-core/serde",
    "ibc-proto/serde",
]
schema = [
    "ibc-core/schema",
    "ibc-proto/json-schema",
    "serde",
    "std"
]
borsh = [
    "dep:borsh",
    "ibc-core/borsh",
    "ibc-proto/borsh",
]
parity-scale-codec = [
    "dep:parity-scale-codec",
    "dep:scale-info",
    "ibc-core/parity-scale-codec",
    "ibc-proto/parity-scale-codec",
]
